--- a/html-form.html
+++ b/html-form.html
@@ -38,6 +38,7 @@
 <body>
 
   <form action="/submit_registration" method="post">
+    <label for="welcome">Welcome to Power Learn Project</label>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 
